--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -90,15 +90,15 @@ steps:
     contents: '_site/**'
     targetFolder: $(Build.ArtifactStagingDirectory)
 
-- task: UniversalPackages@0
-  displayName: Universal Publish
-  inputs:
-    command: publish
-    publishDirectory: '$(Build.ArtifactStagingDirectory)'
-    vstsFeedPublish: 'www-imperfect'
-    vstsFeedPackagePublish: 'www'
-    packagePublishDescription: 'Website Build'
-    versionOption: patch
+#- task: UniversalPackages@0
+#  displayName: Universal Publish
+#  inputs:
+#    command: publish
+#    publishDirectory: '$(Build.ArtifactStagingDirectory)'
+#    vstsFeedPublish: 'www-imperfect'
+#    vstsFeedPackagePublish: 'www'
+#    packagePublishDescription: 'Website Build'
+#    versionOption: patch
     #versionPublish: $(setVar.commitHash)
 
 - task: PublishBuildArtifacts@1
