--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -12,7 +12,7 @@ pr:
 pool:
   vmImage: 'ubuntu-latest'
 
-containers: 
+container: 
   image: jekyll/builder:3.8
   options: --volume="$PWD:/srv/jekyll" --volume="$PWD/vendor/bundle:/usr/local/bundle" 
 
