--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -14,8 +14,8 @@ pool:
 
 resources:
   containers:
-    container: jekyll 
-    image: jekyll/builder:3.8
+    - container: jekyll 
+      image: jekyll/builder:3.8
 
 steps:
 # Build Jekyll Website
