Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -12,8 +12,12 @@ pr:
 pool:
   vmImage: 'ubuntu-16.04'
 
-container:
-  image: ubuntu:16.04
+resources:
+  containers:
+  - image: jekyll/builder:3.8
+    name: jekyll
+
+container: jekyll
 
 steps:
 # Build Jekyll Website
