--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -6,41 +6,29 @@
 trigger:
 - master
 
-pr:
-- master
-
 pool:
   vmImage: 'ubuntu-latest'
 
-<<<<<<< HEAD
   variables:
   - name: imageName
     value: jekyll/builder
   - name: jekyllVersion
     value: 3.8
-=======
-resources:
-  containers:
-  - container: jekyll
-    image: jekyll/builder:3.8
-
-container: jekyll
->>>>>>> 670c8bedbcf496016f79e901aa184f215e1b2e4c
 
 steps:
 # Checkout is done automatically but here for readability
 - checkout: self
 
 # Why was this build executed
-#- bash: |
-#    case $BUILD_REASON in
-#            "Manual") echo "$BUILD_REQUESTEDFOR manually queued the build." ;;
-#            "IndividualCI") echo "This is a CI build for $BUILD_REQUESTEDFOR." ;;
-#            "BatchedCI") echo "This is a batched CI build for $BUILD_REQUESTEDFOR." ;;
-#        *) $BUILD_REASON ;;
-#    esac
-#  condition: eq( variables['Agent.OS'], 'Linux' )
-#  displayName: Get Build Reason
+- bash: |
+    case $BUILD_REASON in
+            "Manual") echo "$BUILD_REQUESTEDFOR manually queued the build." ;;
+            "IndividualCI") echo "This is a CI build for $BUILD_REQUESTEDFOR." ;;
+            "BatchedCI") echo "This is a batched CI build for $BUILD_REQUESTEDFOR." ;;
+        *) $BUILD_REASON ;;
+    esac
+  condition: eq( variables['Agent.OS'], 'Linux' )
+  displayName: Get Build Reason
 
 - script: |
     GIT_COMMIT=$( git rev-parse --short HEAD )
@@ -99,15 +87,15 @@ steps:
     contents: '_site/**'
     targetFolder: $(Build.ArtifactStagingDirectory)
 
-#- task: UniversalPackages@0
-#  displayName: Universal Publish
-#  inputs:
-#    command: publish
-#    publishDirectory: '$(Build.ArtifactStagingDirectory)'
-#    vstsFeedPublish: 'www-imperfect'
-#    vstsFeedPackagePublish: 'www'
-#    packagePublishDescription: 'Website Build'
-#    versionOption: patch
+- task: UniversalPackages@0
+  displayName: Universal Publish
+  inputs:
+    command: publish
+    publishDirectory: '$(Build.ArtifactStagingDirectory)'
+    vstsFeedPublish: 'www-imperfect'
+    vstsFeedPackagePublish: 'www'
+    packagePublishDescription: 'Website Build'
+    versionOption: patch
     #versionPublish: $(setVar.commitHash)
 
 - task: PublishBuildArtifacts@1
