--- a/_config.yml
+++ b/_config.yml
@@ -74,16 +74,23 @@ flattr_button:
 telegram_username:
 vk_id:
 
+# Show next and home buttons at the top of posts
+show_page_navigation: true
+
+# Show minutes for a post
+show_page_minutes: false
+
 # Post sharing icons
-show_sharing_icons: false
+show_sharing_icons: true
 # Change to 'true' to enable individual icons
-share_facebook: false
-share_twitter: false
+share_email: true
+share_facebook: true
+share_twitter: true
 share_googleplus: false
-share_linkedin: false
-share_digg: false
+share_linkedin: true
+share_digg: true
 share_tumblr: false
-share_reddit: false
+share_reddit: true
 share_stumbleupon: false
 share_hackernews: false
 
